# dpaa2-controlplane

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  package.json  pnpm-lock.yaml
.claude/skills/dpaa2-dpdk/: SKILL.md
.claude/skills/dpaa2-dpdk/references/: guides.md
.claude/skills/dpaa2-linux-kernel/: SKILL.md
.claude/skills/dpaa2-linux-kernel/references/: dpaa2.md  ethernet.md  index.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
crates/dpaa2-api/: Cargo.toml
crates/dpaa2-api/src/: error.rs  fake.rs  lib.rs  model.rs  plan.rs  port.rs  reconcile.rs
crates/dpaa2-config/: Cargo.toml
crates/dpaa2-config/src/: lib.rs  parse.rs  schema.rs
crates/dpaa2-mc/: Cargo.toml
crates/dpaa2-mc/src/: kernel.rs  lib.rs  parse.rs  restool.rs  runner.rs
crates/dpaa2-mc/tests/: shim.rs
crates/dpaa2-mc/tests/fixtures/: dpmac_info_fixed.txt  dpmac_info_phy.txt  dpni_create_script.txt  dpni_info_connected.txt  dpni_info_unconnected.txt  dprc_show.txt
crates/dpaa2-tools/: Cargo.toml
crates/dpaa2-tools/src/: engine.rs  lib.rs  link.rs  main.rs  status.rs
crates/dpaa2-tools/tests/: convergence.rs  link_gen.rs
docs/adr/: 0001-dpaa2-provisioning-control-plane-architecture.md
openspec/changes/add-dpaa2-provisioning/: design.md  proposal.md  tasks.md
openspec/changes/add-dpaa2-provisioning/specs/mc-backend/: spec.md
openspec/changes/add-dpaa2-provisioning/specs/provisioning-cli/: spec.md
openspec/changes/add-dpaa2-provisioning/specs/reconciler/: spec.md
openspec/changes/add-dpaa2-provisioning/specs/system-integration/: spec.md
openspec/changes/add-dpaa2-provisioning/specs/topology-config/: spec.md
openspec/changes/archive/2026-07-04-add-dpaa2-provisioning/: design.md  proposal.md  tasks.md
openspec/specs/mc-backend/: spec.md
openspec/specs/provisioning-cli/: spec.md
openspec/specs/reconciler/: spec.md
openspec/specs/system-integration/: spec.md
openspec/specs/topology-config/: spec.md
packaging/: README.md  install.sh
packaging/dpaa2/: topology.toml
packaging/systemd/: dpaa2-provision.service
packaging/udev/: 99-dpaa2-provision.rules
