[package]
name = "dpaa2-config"
version.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dpaa2-api.workspace = true
serde.workspace = true
toml.workspace = true

[lints]
workspace = true
